[package]
name = "cosmology"
authors = ["cavemanloverboy <caveycool@gmail.com>"]
repository = "https://github.com/cavemanloverboy/cosmology"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["cosmology", "physics", "astrophysics", "universe", "structure"]
categories = ["science"]
description = "An early-in-development crate aiming to provide a lot of utilities commonly used in cosmology."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bayesian"]
bayesian = ["hammer-and-sample", "rand", "rand_pcg"]
colossus-python = ["pyo3"]

[dependencies]
quadrature = "0.1.2"
hammer-and-sample = { version = "0.1.4", features = ["rayon"], optional = true }
rand = { version = "0.8.5", optional = true }
rand_pcg = { version = "0.3.1", optional = true }
criterion = "0.3.6"
ouroboros = "0.15.3"

# Optional testing dependency!
# We used colossus==1.3.1 for testing
[dependencies.pyo3]
version = "0.16.5"
features = ["auto-initialize"]
optional = true

[dev-dependencies]
plotters = "0.3.1"
concat-idents = "1.1.3"
dry = "0.1.1"
rand_distr = "0.4.3"

[profile.dev]
codegen-units = 1024


[[bench]]
name = "power"
harness = false

[[bench]]
name = "correlation"
harness = false
