[package]
name = "cosmology"
authors = ["cavemanloverboy <caveycool@gmail.com>"]
repository = "https://github.com/cavemanloverboy/cosmology"
version = "0.3.2"
edition = "2021"
license = "MIT"
keywords = ["cosmology", "physics", "astrophysics", "universe", "structure"]
categories = ["science"]
description = "An early-in-development crate aiming to provide a lot of utilities commonly used in cosmology."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bayesian", "nn", "use-mpi"]
bayesian = ["hammer-and-sample", "rand", "rand_pcg"]
nn = []
use-mpi = ["mpi", "balancer", "lazy_static"]
colossus-python = ["pyo3"]

[dependencies]
quadrature = "0.1.2"
hammer-and-sample = { version = "0.1.4", features = ["rayon"], optional = true }
rand = { version = "0.8.5", optional = true }
rand_pcg = { version = "0.3.1", optional = true }
ouroboros = "0.15.3"
rayon = "1.7.0"
indicatif = "0.17.0"
balancer = { git = "https://github.com/cavemanloverboy/balancer.git", version = "0.1.0", optional = true }
mpi = { version = "0.6.0", optional = true, features = ["derive"] }
lazy_static = { version = "1.4.0", optional = true }
rand_chacha = "0.3.1"

# Optional testing dependency!
# We used colossus==1.3.1 for testing
[dependencies.pyo3]
version = "0.16.5"
features = ["auto-initialize"]
optional = true

[dev-dependencies]
itertools = "0.10.3"
sequential-integration = "1.0.2"
plotters = "0.3.1"
fnntw = "0.2.3"
ndarray-npy = "0.8.1"
ndarray = "0.15.6"
concat-idents = "1.1.3"
dry = "0.1.1"
rand_distr = "0.4.3"
assert_approx_eq = "1.1.0"
plotly = {version = "0.7.0", features = ["kaleido"] }
criterion = "0.4.0"


[[bench]]
name = "power"
harness = false

[[bench]]
name = "correlation"
harness = false

[[bench]]
name = "integration"
harness = false
